--- a/resources/css/common.less
+++ b/resources/css/common.less
@@ -74,15 +74,15 @@ progress::-webkit-progress-value {
 
 // 我的图片
 #photos-grid {
-    a:hover, a.selected {
+    a:hover, a.ds-selected {
         outline-color: #3b82f6;
 
-        .photo-select {
+        .photo-selector {
             display: block;
         }
 
-        &.selected {
-            .photo-select {
+        &.ds-selected {
+            .photo-selector {
                 border-color: white;
 
                 & > i {
