:sparkles: 完善相册样式

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -817,6 +817,12 @@ select {
 .h-6 {
   height: 1.5rem;
 }
+.h-2 {
+  height: 0.5rem;
+}
+.h-7 {
+  height: 1.75rem;
+}
 .min-h-\[150px\] {
   min-height: 150px;
 }
@@ -934,6 +940,9 @@ select {
   -webkit-user-select: all;
      -moz-user-select: all;
           user-select: all;
+}
+.resize-y {
+  resize: vertical;
 }
 .list-inside {
   list-style-position: inside;
@@ -1162,6 +1171,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
+.bg-indigo-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
+}
 .bg-opacity-75 {
   --tw-bg-opacity: 0.75;
 }
@@ -1264,6 +1277,9 @@ select {
 .text-center {
   text-align: center;
 }
+.align-middle {
+  vertical-align: middle;
+}
 .font-sans {
   font-family: Nunito, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -1319,6 +1335,9 @@ select {
 }
 .tracking-widest {
   letter-spacing: 0.1em;
+}
+.tracking-wide {
+  letter-spacing: 0.025em;
 }
 .text-gray-500 {
   --tw-text-opacity: 1;
@@ -1399,6 +1418,14 @@ select {
 .text-slate-600 {
   --tw-text-opacity: 1;
   color: rgb(71 85 105 / var(--tw-text-opacity));
+}
+.text-red-700 {
+  --tw-text-opacity: 1;
+  color: rgb(185 28 28 / var(--tw-text-opacity));
+}
+.text-red-400 {
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -1621,6 +1648,9 @@ select {
 }
 .group:hover .group-hover\:block {
   display: block;
+}
+.group:hover .group-hover\:hidden {
+  display: none;
 }
 .dark .dark\:bg-gray-900 {
   --tw-bg-opacity: 1;
