--- a/public/css/app.css
+++ b/public/css/app.css
@@ -691,6 +691,12 @@ select {
 .z-\[1\] {
   z-index: 1;
 }
+.z-\[99\] {
+  z-index: 99;
+}
+.z-\[999\] {
+  z-index: 999;
+}
 .m-2 {
   margin: 0.5rem;
 }
@@ -772,6 +778,9 @@ select {
 .block {
   display: block;
 }
+.inline-block {
+  display: inline-block;
+}
 .flex {
   display: flex;
 }
@@ -820,6 +829,15 @@ select {
 .h-7 {
   height: 1.75rem;
 }
+.h-\[80\%\] {
+  height: 80%;
+}
+.h-\[50\%\] {
+  height: 50%;
+}
+.h-\[70\%\] {
+  height: 70%;
+}
 .min-h-\[150px\] {
   min-height: 150px;
 }
@@ -864,6 +882,18 @@ select {
 }
 .w-\[90\%\] {
   width: 90%;
+}
+.w-1\.5 {
+  width: 0.375rem;
+}
+.w-1 {
+  width: 0.25rem;
+}
+.w-\[50\%\] {
+  width: 50%;
+}
+.w-\[70\%\] {
+  width: 70%;
 }
 .max-w-xl {
   max-width: 36rem;
@@ -1036,6 +1066,9 @@ select {
 .overflow-y-auto {
   overflow-y: auto;
 }
+.overflow-x-scroll {
+  overflow-x: scroll;
+}
 .overflow-y-scroll {
   overflow-y: scroll;
 }
@@ -1205,6 +1238,9 @@ select {
 .p-3 {
   padding: 0.75rem;
 }
+.p-1 {
+  padding: 0.25rem;
+}
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1313,6 +1349,13 @@ select {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+.text-\[100\%\] {
+  font-size: 100%;
 }
 .font-medium {
   font-weight: 500;
@@ -1641,6 +1684,9 @@ select {
 .group:hover .group-hover\:block {
   display: block;
 }
+.group:hover .group-hover\:flex {
+  display: flex;
+}
 .group:hover .group-hover\:hidden {
   display: none;
 }
@@ -1718,6 +1764,21 @@ select {
 
   .sm\:pt-0 {
     padding-top: 0px;
+  }
+
+  .sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .sm\:shadow-none {
