--- a/resources/css/common.less
+++ b/resources/css/common.less
@@ -83,9 +83,8 @@ progress::-webkit-progress-value {
 
         &.ds-selected {
             .photo-selector {
-                border-color: white;
-
-                & > i {
+                i {
+                    border-color: white;
                     color: #0061ff;
                 }
             }
