--- a/resources/css/common.less
+++ b/resources/css/common.less
@@ -73,16 +73,16 @@ progress::-webkit-progress-value {
 }
 
 // 我的图片
-#photos-grid {
+#images-grid {
     a:hover, a.ds-selected {
         outline-color: #3b82f6;
 
-        .photo-selector {
+        .image-selector {
             display: block;
         }
 
         &.ds-selected {
-            .photo-selector {
+            .image-selector {
                 i {
                     border-color: white;
                     color: #0061ff;
