--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1418,6 +1418,14 @@ select {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
 }
+.px-1\.5 {
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
+}
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
 .pb-6 {
   padding-bottom: 1.5rem;
 }
